base/spa/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-spa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-spa
  template:
    metadata:
      labels:
        app: ms-spa
    spec:
      imagePullSecrets:
      - name: oci-registry
      containers:
      - image: iad.ocir.io/idwwmbyiyhww/meta-spa:latest
        imagePullPolicy: Always
        name: ms-spa
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
