base/spa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-spa
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: ms-spa
  sessionAffinity: None
  type: ClusterIP
