base/spa/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: spa 
  namespace: meta-ms

spec:
  entryPoints:
    - web

  routes:
  - match: Host(`cmstg.metaformers.com`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: ms-spa
      port: 3000
